StockPriceResultBeanにて統一利用するようにした